<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/photoPickerView"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFFFFF"
  android:gravity="center"
  android:orientation="vertical">

  <LinearLayout
    android:id="@+id/photoPickerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      android:orientation="horizontal">

      <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="left|center_vertical"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:text="@string/my_albums"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

      <TextView
        android:id="@+id/albumTitle"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_weight="4"
        android:ellipsize="end"
        android:gravity="center|center_vertical"
        android:maxLines="1"
        android:text="Recents"
        android:textAlignment="center"
        android:textColor="#CB000000"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

      <Button
        android:id="@+id/btnClosePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:maxLines="1"
        android:paddingRight="12dp"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/photoRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="#f5f5f5">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="bottom"
      android:orientation="vertical"
      android:paddingLeft="16dp"
      android:paddingTop="10dp"
      android:paddingRight="16dp"
      android:paddingBottom="10dp">

      <TextView
        android:id="@+id/selectedPhotoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:gravity="start"
        android:text="@string/number_of_photos_selected"
        android:textColor="#C3000000"
        android:textStyle="normal"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
          android:id="@+id/btnClear"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="4dp"
          android:layout_marginRight="4dp"
          android:layout_weight="1"
          android:background="@drawable/round_button"
          android:text="@string/clear_all"
          android:textAllCaps="false"
          android:textColor="@color/colorPrimary"
          app:autoSizeMaxTextSize="14sp"
          app:autoSizeMinTextSize="8sp"
          app:autoSizeStepGranularity="2sp"
          app:autoSizeTextType="uniform" />

        <Button
          android:id="@+id/btnDone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:layout_weight="1"
          android:background="@drawable/round_button_solid"
          android:text="@string/done"
          android:textAllCaps="false"
          android:textColor="#FFFFFF"
          app:autoSizeMaxTextSize="14sp"
          app:autoSizeMinTextSize="8sp"
          app:autoSizeStepGranularity="2sp"
          app:autoSizeTextType="uniform" />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>
